# bazel-archive-example

./: BUILD  MODULE.bazel  WORKSPACE  bsr_import.bzl  bsr_index.bzl  buf.lock.json  buf.yaml  extensions.bzl
app/: BUILD.bazel  app.py
proto/reg/: BUILD.bazel  reg.proto
